@@ -22,31 +22,69 @@ require 'spec_helper'
 module ElasticAPM
   RSpec.describe TraceContext::Tracestate do
     describe '.parse' do
-      it 'parses a header' do
-        result = described_class.parse('a=b')
-        expect(result.values).to eq(['a=b'])
-      end
+      subject { described_class.parse(header) }
 
-      it 'handles multiple values' do
-        result = described_class.parse("a=b\nc=d")
-        expect(result.values).to eq(['a=b', 'c=d'])
+      context 'without an es section' do
+        let(:header) { "a=b,c=d\ne=f" }
+
+        it 'splits into individual entries by key' do
+          expect(subject.entries.keys).to eq %w[a c e]
+          expect(subject.entries.count).to be 3
+        end
       end
     end
 
     describe '#to_header' do
-      context 'with a single value' do
-        subject { described_class.parse('a=b') }
-        its(:to_header) { is_expected.to eq 'a=b' }
-      end
+      subject { described_class.parse(header) }
 
-      context 'with multiple values' do
-        subject { described_class.parse("a=b\nc=d") }
-        its(:to_header) { is_expected.to eq 'a=b,c=d' }
-      end
-
-      context 'with mixed' do
-        subject { described_class.parse("a=b,c=d\ne=f") }
+      context 'with multiple sections' do
+        let(:header) { "a=b,c=d\ne=f" }
         its(:to_header) { is_expected.to eq 'a=b,c=d,e=f' }
+      end
+    end
+
+    context 'with an es field' do
+      subject { described_class.parse(header) }
+
+      let(:header) { "es=s:1;b:2,othervendor=na" }
+
+      it 'parses es field' do
+        expect(subject.entries['es'].value).to eq('s:1.0')
+        expect(subject.entries['othervendor'].value).to eq 'na'
+      end
+
+      context 'with bad values' do
+        [
+          ['es=xyz', nil],
+          ['es=s:foo', nil],
+          ['es=s:1.5', nil]
+        ].each do |(input, expectation)|
+          describe input do
+            let(:header) { input }
+            it 'is nil' do
+              expect(subject.entries['es'].to_s).to be expectation
+            end
+          end
+        end
+      end
+    end
+
+    context 'sample_rate' do
+      it 'is nil when not set' do
+        state = described_class.parse('a=b')
+        expect(state.sample_rate).to be nil
+      end
+
+      it 'parses good values' do
+        state = described_class.parse('es=s:0.5')
+        expect(state.sample_rate).to eq 0.5
+        expect(state.to_header).to eq 'es=s:0.5'
+      end
+
+      it 'rounds to three decimals' do
+        state = described_class.new
+        state.sample_rate = 0.123456
+        expect(state.to_header).to eq('es=s:0.123')
       end
     end
   end
