@@ -34,6 +34,11 @@ module ElasticAPM
         end
 
         its(:traceparent) { is_expected.to be_a TraceContext::Traceparent }
+
+        it "doesn't set sample_rate" do
+          expect(subject.tracestate.sample_rate).to be nil
+          expect(subject.tracestate.to_header).to eq ""
+        end
       end
 
       context 'with an invalid traceparent' do
@@ -120,9 +125,10 @@ module ElasticAPM
           end
 
           expect(calls).to match(
-            'Traceparent' => String
+            'Traceparent' => String,
+            'Tracestate' => String
           )
-          expect(calls.length).to be 1
+          expect(calls.length).to be 2
         end
       end
 
@@ -137,9 +143,10 @@ module ElasticAPM
 
           expect(calls).to match(
             'Traceparent' => String,
-            'Elastic-Apm-Traceparent' => String
+            'Elastic-Apm-Traceparent' => String,
+            'Tracestate' => String
           )
-          expect(calls.values.uniq.length).to be 1
+          expect(calls.values.uniq.length).to be 2
         end
       end
 
@@ -148,7 +155,7 @@ module ElasticAPM
           calls = {}
           block = ->(k, v) { calls[k] = v }
 
-          subject.tracestate = TraceContext::Tracestate.parse('a=b')
+          subject.tracestate = TraceContext::Tracestate.parse('es=s:1.0,b=na')
 
           with_agent do
             subject.apply_headers(&block)
@@ -157,7 +164,7 @@ module ElasticAPM
           expect(calls).to match(
             'Traceparent' => String,
             'Elastic-Apm-Traceparent' => String,
-            'Tracestate' => 'a=b'
+            'Tracestate' => 'es=s:1.0,b=na'
           )
         end
       end
