@@ -35,6 +35,12 @@ endif::[]
 [[release-notes-3.x]]
 === Ruby Agent version 3.x
 
+[float]
+[[unreleased]]
+==== Unreleased
+
+- Add and read sampling info from Tracestate headers {pull}858[#858]
+
 [[release-notes-3.10.1]]
 ==== 3.10.1 (2020-08-26)
 
